updated style naming to generalize

--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -124,7 +124,7 @@
 			padding: 7px;
 		}
 
-		.paris-menu-title {
+		.showcase-menu-title {
 			color: white;
 			font-weight: 700;
 			letter-spacing: 5px;
@@ -138,7 +138,7 @@
 			-webkit-text-fill-color: transparent;
 		}
 
-		.paris-menu-text {
+		.showcase-menu-text {
 			font-size: 13px;
 			padding: 7px;
 		}
