get rid of paris references in styles

--- a/src/components/layout/navbar/styles.scss
+++ b/src/components/layout/navbar/styles.scss
@@ -22,7 +22,7 @@
 		}
 	}
 	
-	.text-parisshowcase {
+	.text-showcase {
 		font-weight: 700;
 		padding: 0 20px;
 	}
@@ -39,7 +39,7 @@
 			}
 		}
 		
-		.text-parisshowcase {
+		.text-showcase {
 			font-size: 14px;
 			padding: 0 20px;
 		}
