--- a/src/components/layout/navbar/styles.scss
+++ b/src/components/layout/navbar/styles.scss
@@ -9,15 +9,19 @@
 	background-color: $c-black;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
+	height: 54px;
 
 	.navbar-item-list {
 		display: flex;
+		margin-left: 20px;
 		.navbar-item {
 			color: $c-blue;
 			font-size: 16px;
 			padding: 0 15px;
 			&:hover {
 				cursor: pointer;
+				color: white;
 			}
 		}
 	}
@@ -25,6 +29,7 @@
 	.text-showcase {
 		font-weight: 700;
 		padding: 0 20px;
+		margin-right: 20px;
 	}
 }
 
