--- a/src/components/styles_global.scss
+++ b/src/components/styles_global.scss
@@ -1,7 +1,7 @@
 @import './_variables.scss';
 
 .text-gradient {
-	background: linear-gradient(-27deg, $c-blue 40%, #DB5994 47%, #E4CB6F 70%);
+	background: linear-gradient(150deg,  #E4CB6F 20%,#DB5994 50% ,#7735BD 60%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
@@ -12,9 +12,26 @@
 	-webkit-text-fill-color: transparent;
 }
 
+.text-gradient-big1 {
+	background: linear-gradient(150deg,  #E4CB6F 20%,#DB5994 50% ,#7735BD 60%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.text-gradient-big2 {
+	background: linear-gradient(150deg,  #E4CB6F 50%,#DB5994 80% ,#7735BD 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
 .text-content-gray {
-	color: $c-gray;
+	margin-top:3%;
+	// color: $c-gray;
+	color: white;
 	font-size: 16px;
+	// font-family: Roboto;
+	font-style: normal;
+	font-weight: normal;
 	line-height: 28px;
 }
 
