--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -1,11 +1,24 @@
 .home-container {
-	background-image: url("../../assets/homebackground.png");
+	background-color: black;
+	background-repeat: repeat-y;
+	background-size: cover;
+	background-image: url("../../assets/right_panel1.png");
+	overflow: scroll;
 
 	.text-wrapper {
-		padding: 40px;
+		padding: 120px 40px 40px 40px;
 
 		.vector-image {
 			width: 200px;
+		}
+	}
+
+	.text-wrapper1 {
+		padding: 100px 40px 40px 40px;
+		// text-align: center;
+		.vector-image {
+			// width: 664px;
+			// height: 300px;
 		}
 	}
 
@@ -49,12 +62,55 @@
 	}
 }
 // Mobile Design //
+@media (max-width: 1200px) {
+	.text-subtitle {
+		font-size: 60px !important;
+		font-weight: 200 !important;
+		line-height: 60px !important;
+	}
+}
+
+
+@media (max-width: 1000px) {
+	.text-subtitle {
+		font-size: 50px !important;
+		font-weight: 150 !important;
+		line-height: 40px !important;
+	}
+}
+
+@media (max-width: 800px) {
+	.text-subtitle {
+		font-size: 40px !important;
+		font-weight: 100 !important;
+		line-height: 40px !important;
+	}
+}
+
 @media (max-width: 625px) {
 	.home-container {
 		background-image: none;
 		background-color: black;
 
 		.text-wrapper {
+			padding: 20px;
+
+			.vector-image {
+				// width: 200px;
+			}
+
+			.text-subtitle {
+				font-size: 36px;
+				font-weight: 200;
+				line-height: 72px;
+			}
+
+			.text-content-gray {
+				font-size: 15px;
+				line-height: 24px;
+			}
+		}
+		.text-wrapper1 {
 			padding: 20px;
 
 			.vector-image {
