remove compile errors

--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -3,7 +3,7 @@
 	background-repeat: repeat-y;
 	background-size: cover;
 	background-image: url("../../assets/right_panel1.png");
-	overflow: scroll;
+	// overflow: scroll;
 
 	.text-wrapper {
 		padding: 120px 40px 40px 40px;
